crates/fin_parser/src/snapshots/fin_parser__tests__insta@const_item_pub.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/const_item_pub.fin
---
File@0..20
  ItemConst@0..20
    PubKw@0..3 "pub"
    Whitespace@3..4 " "
    ConstKw@4..9 "const"
    Whitespace@9..10 " "
    PatIdent@10..14
      Name@10..14
        Ident@10..13 "Foo"
        Whitespace@13..14 " "
    Eq@14..15 "="
    Whitespace@15..16 " "
    ExprIdent@16..19
      Ident@16..19 "bar"
    Semi@19..20 ";"
