crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_block.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_block.fin
---
File@0..7
  ItemExpr@0..7
    ExprBlock@0..7
      BraceOpen@0..1 "{"
      Whitespace@1..2 " "
      StmtExpr@2..6
        ExprIdent@2..6
          Ident@2..5 "foo"
          Whitespace@5..6 " "
      BraceClose@6..7 "}"
