crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_call_no_args.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_call_no_args.fin
---
File@0..5
  ItemExpr@0..5
    ExprCall@0..5
      ExprIdent@0..3
        Ident@0..3 "foo"
      ParenOpen@3..4 "("
      CallArgs@4..4
      ParenClose@4..5 ")"
